--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 fade-in text-center">
-                         <img src="images/qrcode_renovaluz_com_logo.png" alt="Equipa Renovaluz" class="img-fluid rounded-4 shadow-lg">
+                         <img src="images/qrcode_renovaluz.png" alt="Equipa Renovaluz" class="img-fluid rounded-4 shadow-lg">
                     </div>
                 </div>
                 
