--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                      <div class="col-6 col-md-6 col-lg-4 fade-in">
                         <div class="service-card">
                             <div class="icon-wrapper"><i class="bi bi-tree-fill"></i></div>
-                            <h3>Jardinagem e Reflorestamento</h3>
-                            <p>Criação de espaços verdes urbanos e recuperação de áreas degradadas.</p>
+                            <h3>Jardinagem e Plantação</h3>
+                            <p>Criação de espaços verdes urbanos e recuperação de áreas degradadas, Reflorestamento.</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-4 fade-in">
